--- a/firstHtmlPage/chickens.html
+++ b/firstHtmlPage/chickens.html
@@ -6,17 +6,21 @@
 
   <body>
     <h1>Chicken</h1>
+    <a href="http://www.google.com">googe it</a>
+    <a href="about.html">aboute me</a>
 
     <p>
       The <b>chicken</b> (Gallus gallus domesticus) is a domesticated subspecies
-      of the red junglefowl originally from Southeastern Asia. Rooster or cock
-      is a term for an adult male bird, and younger male may be called a
-      cockerel. A male that has been castrated is a capon. An adult female bird
-      is called a hen and a sexually immature female is called a pullet.
-      Originally raised for cockfighting or for special ceremonies, chickens
-      were not kept for food until the Hellenistic period (4th–2nd centuries
-      BC).[1][2] Humans now keep chickens primarily as a source of food
-      (consuming both their meat and eggs) and as pets.
+      of the
+      <a href="https://en.wikipedia.org/wiki/Red_junglefowl">red junglefowl</a>
+      originally from Southeastern Asia. Rooster or cock is a term for an adult
+      male bird, and younger male may be called a cockerel. A male that has been
+      castrated is a capon. An adult female bird is called a hen and a sexually
+      immature female is called a pullet. Originally raised for cockfighting or
+      for special ceremonies, chickens were not kept for food until the
+      Hellenistic period (4th–2nd centuries BC).[1][2] Humans now keep chickens
+      primarily as a source of food (consuming both their meat and eggs) and as
+      pets.
     </p>
     <p>
       Chickens are one of the most common and widespread domestic animals, with
@@ -99,3 +103,9 @@
     </ul>
   </body>
 </html>
+
+<ul>
+  <li>Alien</li>
+  <li>Parasite</li>
+  <li>Annie Hall</li>
+</ul>
