--- a/firstHtmlPage/chickens.html
+++ b/firstHtmlPage/chickens.html
@@ -5,9 +5,12 @@
   </head>
 
   <body>
-    <h1>Chicken</h1>
+    <h1>Chickens</h1>
+
+    <img src="pictures/chickens.jpg" />
+
     <a href="http://www.google.com">googe it</a>
-    <a href="about.html">aboute me</a>
+    <a href="about.html" alt="a regular chicken">aboute me</a>
 
     <p>
       The <b>chicken</b> (Gallus gallus domesticus) is a domesticated subspecies
@@ -101,6 +104,9 @@
         </ul>
       </li>
     </ul>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/298px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg"
+    />
   </body>
 </html>
 
