--- a/firstHtmlPage/chickens.html
+++ b/firstHtmlPage/chickens.html
@@ -7,6 +7,14 @@
 
 <body>
     <h1>Chickens</h1>
+    <hr>
+
+    <h2>Auguries of Innocence</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, <br>
+        repellendus. Labore, blanditiis voluptates saepe illum sit unde accusamus pariatur provident, <br>
+        iste, velit perspiciatis. Incidunt quod corrupti officiis vero mollitia voluptas? <br>
+    </p>
 
     <img src="pictures/chickens.jpg" />
     <div>
@@ -25,15 +33,15 @@
         castrated is a capon. An adult female bird is called a hen and a sexually
         immature female is called a pullet. Originally raised for cockfighting or
         for special ceremonies, chickens were not kept for food until the
-        Hellenistic period (4th–2nd centuries BC).[1][2] Humans now keep chickens
+        Hellenistic period (4th–2nd centuries BC).<sup>[777]</sup><sup>[777]</sup> Humans now keep chickens
         primarily as a source of food (consuming both their meat and eggs) and as
         pets.
     </p>
     <p>
         Chickens are one of the most common and widespread domestic animals, with
-        a total population of 23.7 billion as of 2018,[3] up from more than 19
-        billion in 2011.[4] There are more chickens in the world than any other
-        bird.[4] There are numerous cultural references to chickens – in myth,
+        a total population of 23.7 billion as of 2018,<sup>[777]</sup> up from more than 19
+        billion in 2011.<sup>[777]</sup> There are more chickens in the world than any other
+        bird.<sup>[777]</sup> There are numerous cultural references to chickens – in myth,
         folklore and religion, and in language and literature.
     </p>
 
@@ -110,6 +118,8 @@
     </ul>
     <img
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/298px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg" />
+    <h2>I Like H<sub>2</sub>O</h2>
+    <p><sup>1</sup>/<sub>2</sub> + <sup>1</sup>/<sub>2</sub> = 1</p>
 </body>
 
 </html>
