added meaningful containers

--- a/firstHtmlPage/chickens.html
+++ b/firstHtmlPage/chickens.html
@@ -6,129 +6,139 @@
 </head>
 
 <body>
-<h1>1 &lt; 6 &gt; 5</h1>
 
-    <h1>Chickens</h1>
-    <hr>
+    <nav>
+        <ul>
+            <li><a href="home">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>1 &lt; 6 &gt; 5</h1>
 
-    <h2>Auguries of Innocence</h2>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, <br>
-        repellendus. Labore, blanditiis voluptates saepe illum sit unde accusamus pariatur provident, <br>
-        iste, velit perspiciatis. Incidunt quod corrupti officiis vero mollitia voluptas? <br>
-    </p>
+        <h1>Chickens</h1>
+        <hr>
 
-    <img src="pictures/chickens.jpg" />
-    <div>
-        <a href="http://www.google.com"><span>googe it</span></a>
-    </div>
-    <div>
-        <a href="about.html" alt="a regular chicken">aboute me</a>
-    </div>
+        <h2>Auguries of Innocence</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, <br>
+            repellendus. Labore, blanditiis voluptates saepe illum sit unde accusamus pariatur provident, <br>
+            iste, velit perspiciatis. Incidunt quod corrupti officiis vero mollitia voluptas? <br>
+        </p>
 
-    <p>
-        The <b>chicken</b> (Gallus gallus domesticus) is a domesticated subspecies
-        of the
-        <a href="https://en.wikipedia.org/wiki/Red_junglefowl">red junglefowl</a>
-        originally from Southeastern Asia. Rooster or cock is a term for an adult
-        male bird, and younger male may be called a cockerel. A male that has been
-        castrated is a capon. An adult female bird is called a hen and a sexually
-        immature female is called a pullet. Originally raised for cockfighting or
-        for special ceremonies, chickens were not kept for food until the
-        Hellenistic period (4th–2nd centuries BC).<sup>[777]</sup><sup>[777]</sup> Humans now keep chickens
-        primarily as a source of food (consuming both their meat and eggs) and as
-        pets.
-    </p>
-    <p>
-        Chickens are one of the most common and widespread domestic animals, with
-        a total population of 23.7 billion as of 2018,<sup>[777]</sup> up from more than 19
-        billion in 2011.<sup>[777]</sup> There are more chickens in the world than any other
-        bird.<sup>[777]</sup> There are numerous cultural references to chickens – in myth,
-        folklore and religion, and in language and literature.
-    </p>
+        <img src="pictures/chickens.jpg" />
+        <div>
+            <a href="http://www.google.com"><span>googe it</span></a>
+        </div>
+        <div>
+            <a href="about.html" alt="a regular chicken">aboute me</a>
+        </div>
 
-    <h2>Terminology</h2>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, ea quidem
-        repellendus eligendi dolorum unde asperiores nam enim repudiandae,
-        expedita distinctio animi? Corporis aliquid molestias sapiente
-        consectetur, minus nobis nulla? Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Dicta repudiandae unde magni ea harum totam doloremque
-        corporis aliquid dolor eius at, eligendi ad, architecto sapiente in quam
-        cupiditate consequuntur! Architecto. Perspiciatis quidem, veritatis illum
-        qui inventore non tempore omnis sequi incidunt laudantium cumque vitae
-        eaque quo quam magni dolor, harum labore? Voluptatibus vitae accusamus
-        sit, repudiandae nam pariatur asperiores obcaecati. Molestias, quisquam!
-        Aliquam velit beatae tempora eveniet, nemo perferendis nam alias veniam
-        maxime error eligendi neque nobis sed, ex eum! Officia, ratione atque.
-        Totam quibusdam corrupti ut voluptatibus qui porro. Consequuntur explicabo
-        eos veniam iste! Asperiores autem minus, officiis quas itaque nulla dicta
-        minima blanditiis cumque cum deserunt sapiente aspernatur est, molestias
-        possimus omnis unde quo perferendis ratione. Architecto, sit. Cumque
-        beatae quam voluptatem autem, atque ducimus quibusdam! Porro fugit cum
-        numquam, aspernatur laborum quisquam molestias architecto voluptate
-        explicabo? Ipsa, sed ducimus consectetur fuga eligendi nemo sint illo
-        omnis adipisci!
-    </p>
-
-    <h2>Etymology</h2>
-    <h3>Behavior</h3>
-    <h4>Social behaviour</h4>
-    <h4>Broodiness</h4>
-    <h5>I am H5</h5>
-    <h6>I am H6</h6>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis iure
-        excepturi aperiam. Nisi fuga quaerat quas suscipit illum recusandae
-        voluptas at optio, quasi aperiam nihil blanditiis corrupti beatae quae
-        perferendis! Molestiae sequi cumque ab officia, similique excepturi eos
-        rerum minus! Molestias id officiis atque assumenda veritatis deserunt
-        voluptate sed consequuntur beatae ea quisquam, error facere
-        exercitationem, corporis quae quia et. At quis placeat eum facere adipisci
-        amet quibusdam iusto labore similique incidunt nesciunt eveniet eius est
-        in eligendi excepturi, alias neque libero dicta molestiae officia nulla
-        voluptatum voluptatibus magni! Quaerat!
-    </p>
-    <h2>Breeds Of Chickens</h2>
-    <ul>
-        <li>Silkie</li>
-        <li>Polish</li>
-        <li>Easter Egger</li>
-        <li>Rhode Island Red</li>
-    </ul>
-    <ul>
-        <li>Silkie</li>
-        <li>Polish</li>
-        <li>Easter Egger</li>
-        <li>Rhode Island Red</li>
-    </ul>
-    <ul>
-        <li>
-            Bantam
-            <ul>
-                <li>Silkie</li>
-                <li>Polish</li>
-            </ul>
-        </li>
-        <li>
-            Standart
-            <ul>
-                <li>Easter Egger</li>
-                <li>Rhode Island Red</li>
-            </ul>
-        </li>
-    </ul>
-    <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/298px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg" />
-    <h2>I Like H<sub>2</sub>O</h2>
-    <p><sup>1</sup>/<sub>2</sub> + <sup>1</sup>/<sub>2</sub> = 1</p>
-
+        <p>
+            The <b>chicken</b> (Gallus gallus domesticus) is a domesticated subspecies
+            of the
+            <a href="https://en.wikipedia.org/wiki/Red_junglefowl">red junglefowl</a>
+            originally from Southeastern Asia. Rooster or cock is a term for an adult
+            male bird, and younger male may be called a cockerel. A male that has been
+            castrated is a capon. An adult female bird is called a hen and a sexually
+            immature female is called a pullet. Originally raised for cockfighting or
+            for special ceremonies, chickens were not kept for food until the
+            Hellenistic period (4th–2nd centuries BC).<sup>[777]</sup><sup>[777]</sup> Humans now keep chickens
+            primarily as a source of food (consuming both their meat and eggs) and as
+            pets.
+        </p>
+        <p>
+            Chickens are one of the most common and widespread domestic animals, with
+            a total population of 23.7 billion as of 2018,<sup>[777]</sup> up from more than 19
+            billion in 2011.<sup>[777]</sup> There are more chickens in the world than any other
+            bird.<sup>[777]</sup> There are numerous cultural references to chickens – in myth,
+            folklore and religion, and in language and literature.
+        </p>
+        <section>
+            <h2>Terminology</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, ea quidem
+                repellendus eligendi dolorum unde asperiores nam enim repudiandae,
+                expedita distinctio animi? Corporis aliquid molestias sapiente
+                consectetur, minus nobis nulla? Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Dicta repudiandae unde magni ea harum totam doloremque
+                corporis aliquid dolor eius at, eligendi ad, architecto sapiente in quam
+                cupiditate consequuntur! Architecto. Perspiciatis quidem, veritatis illum
+                qui inventore non tempore omnis sequi incidunt laudantium cumque vitae
+                eaque quo quam magni dolor, harum labore? Voluptatibus vitae accusamus
+                sit, repudiandae nam pariatur asperiores obcaecati. Molestias, quisquam!
+                Aliquam velit beatae tempora eveniet, nemo perferendis nam alias veniam
+                maxime error eligendi neque nobis sed, ex eum! Officia, ratione atque.
+                Totam quibusdam corrupti ut voluptatibus qui porro. Consequuntur explicabo
+                eos veniam iste! Asperiores autem minus, officiis quas itaque nulla dicta
+                minima blanditiis cumque cum deserunt sapiente aspernatur est, molestias
+                possimus omnis unde quo perferendis ratione. Architecto, sit. Cumque
+                beatae quam voluptatem autem, atque ducimus quibusdam! Porro fugit cum
+                numquam, aspernatur laborum quisquam molestias architecto voluptate
+                explicabo? Ipsa, sed ducimus consectetur fuga eligendi nemo sint illo
+                omnis adipisci!
+            </p>
+        </section>
+        <h2>Etymology</h2>
+        <h3>Behavior</h3>
+        <h4>Social behaviour</h4>
+        <h4>Broodiness</h4>
+        <h5>I am H5</h5>
+        <h6>I am H6</h6>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis iure
+            excepturi aperiam. Nisi fuga quaerat quas suscipit illum recusandae
+            voluptas at optio, quasi aperiam nihil blanditiis corrupti beatae quae
+            perferendis! Molestiae sequi cumque ab officia, similique excepturi eos
+            rerum minus! Molestias id officiis atque assumenda veritatis deserunt
+            voluptate sed consequuntur beatae ea quisquam, error facere
+            exercitationem, corporis quae quia et. At quis placeat eum facere adipisci
+            amet quibusdam iusto labore similique incidunt nesciunt eveniet eius est
+            in eligendi excepturi, alias neque libero dicta molestiae officia nulla
+            voluptatum voluptatibus magni! Quaerat!
+        </p>
+        <h2>Breeds Of Chickens</h2>
+        <ul>
+            <li>Silkie</li>
+            <li>Polish</li>
+            <li>Easter Egger</li>
+            <li>Rhode Island Red</li>
+        </ul>
+        <ul>
+            <li>Silkie</li>
+            <li>Polish</li>
+            <li>Easter Egger</li>
+            <li>Rhode Island Red</li>
+        </ul>
+        <ul>
+            <li>
+                Bantam
+                <ul>
+                    <li>Silkie</li>
+                    <li>Polish</li>
+                </ul>
+            </li>
+            <li>
+                Standart
+                <ul>
+                    <li>Easter Egger</li>
+                    <li>Rhode Island Red</li>
+                </ul>
+            </li>
+        </ul>
+        <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/298px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg" />
+        <h2>I Like H<sub>2</sub>O</h2>
+        <p><sup>1</sup>/<sub>2</sub> + <sup>1</sup>/<sub>2</sub> = 1</p>
+    </main>
+    <footer>
+        <p>this is another hello world project</p>
+        <ul>
+            <li><a href="contanc">Contact</a></li>
+            <li><a href="help">Help</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
-
-<ul>
-    <li>Alien</li>
-    <li>Parasite</li>
-    <li>Annie Hall</li>
-</ul>
