more standart at coomon way to use label

--- a/firstHtmlPage/fomrs.html
+++ b/firstHtmlPage/fomrs.html
@@ -26,10 +26,13 @@
             <input id="color" type="color">
         </p>
         <div>
-            <label for="timeBegin">Time begin with </label>
-            <input type="datetime-local" id="timeBegin">
-            <label for="timeEnding">Ending with</label>
-            <input type="datetime-local" id="timeEnding">
+            <label>Time begin with
+                <input type="datetime-local" id="timeBegin">
+            </label>
+
+            <label>Ending with
+                <input type="datetime-local">
+            </label>
         </div>
     </form>
 
