--- a/firstHtmlPage/fomrs.html
+++ b/firstHtmlPage/fomrs.html
@@ -15,24 +15,24 @@
     <form action="/someWhat">
         <p>
             <label for="userName">Enter a user name:</label>
-            <input id="userName" type="text" placeholder="username">
+            <input id="userName" type="text" placeholder="username" name="user">
         </p>
         <p>
             <label for="pass">Enter a password:</label>
-            <input id="pass" type="password" placeholder="password">
+            <input id="pass" type="password" placeholder="password" name="p">
         </p>
         <p>
             <label for="color">Choose a color:</label>
-            <input id="color" type="color">
+            <input id="color" type="color" name="col">
         </p>
         <div>
             <!-- Alternative way to label an input (less common) -->
             <label>Time begin with
-                <input type="datetime-local" id="timeBegin">
+                <input type="datetime-local" id="timeBegin" name="tBegin">
             </label>
 
             <label>Ending with
-                <input type="datetime-local">
+                <input type="datetime-local" name="tEnd">
             </label>
         </div>
         <!-- This button doesn`t submit the form b/c of the "type" attribute -->
@@ -45,6 +45,25 @@
 
     <!-- Outside of a form, no default behavior -->
     <button>Not inside form</button>
+
+    <h2>Hijacking Searches</h2>
+    <h3>Search in Reddit</h3>
+    <form action="https://www.reddit.com/search">
+    <input type="text" name="q">
+    <button>Search reddit</button>
+    </form>
+
+    <h3>Searche in Google</h3>
+    <form action="https://www.google.com/search">
+    <input type="text" name="q">
+    <button>Search in google</button>
+    </form>
+
+    <h3>Serach in YouTube</h3>
+    <form action="https://www.youtube.com/results">
+    <input type="text" name="search_query">
+    <button>Search in youtube</button>
+    </form>
 
 </body>
 
