--- a/firstHtmlPage/fomrs.html
+++ b/firstHtmlPage/fomrs.html
@@ -49,22 +49,51 @@
     <h2>Hijacking Searches</h2>
     <h3>Search in Reddit</h3>
     <form action="https://www.reddit.com/search">
-    <input type="text" name="q">
-    <button>Search reddit</button>
+        <input type="text" name="q">
+        <button>Search reddit</button>
     </form>
 
     <h3>Searche in Google</h3>
     <form action="https://www.google.com/search">
-    <input type="text" name="q">
-    <button>Search in google</button>
+        <input type="text" name="q">
+        <button>Search in google</button>
     </form>
 
     <h3>Serach in YouTube</h3>
     <form action="https://www.youtube.com/results">
-    <input type="text" name="search_query">
-    <button>Search in youtube</button>
+        <input type="text" name="search_query">
+        <button>Search in youtube</button>
     </form>
 
+
+    <h2>More Inputs</h2>
+    <h3>Checkbox</h3>
+    <form action="/birds">
+        <input type="checkbox" name="agree_tos" id="agree" checked>
+        <label for="agree">I agree to everything by default</label>
+        <p>
+            <label>Small:
+                <input type="radio" name="size" value="xs">
+            </label>
+            <label>Medium:
+                <input type="radio" name="size" value="s">
+            </label>
+            <label>Large:
+                <input type="radio" name="size" value="m">
+            </label>
+        </p>
+
+        <p>
+            <label for="meal">Please select an entree</label>
+            <select name="meal" id="meal">
+                <option value="" selected>Choose you meal</option>
+                <option value="fish">Fish</option>
+                <option value="vegetarion">Vegetarion</option>
+                <option value="chicky">Chicky</option>
+            </select>
+        </p>
+        <button>Submit</button>
+    </form>
 </body>
 
 </html>
