added pseudo elements

--- a/firstCssStyle/selectors.html
+++ b/firstCssStyle/selectors.html
@@ -54,6 +54,21 @@
             <button>+Vote</button>
             <hr>
         </section>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis non minus delectus sit ipsa nam commodi
+            deserunt in quidem labore repellat animi impedit exercitationem hic nihil distinctio, est fugit itaque!
+            Magni, nesciunt, inventore obcaecati dignissimos earum autem sint non excepturi consequatur officia commodi
+            numquam ducimus. Dicta cupiditate eligendi excepturi voluptate obcaecati quibusdam ratione corrupti. Unde
+            nam beatae delectus facere hic.
+            Sed blanditiis nam animi aut sit ad nostrum itaque debitis enim in perspiciatis aliquid quidem temporibus,
+            unde corporis distinctio placeat dicta assumenda voluptates magni adipisci quia voluptatem harum eligendi.
+            Cupiditate.
+            Illum earum eaque adipisci nesciunt alias debitis, incidunt sequi cumque laudantium commodi optio quaerat,
+            quas asperiores accusantium quis odio! In quis deleniti, ducimus commodi quam ab aut consequatur. Sapiente,
+            omnis.
+            Enim voluptatum ad odit consequuntur, unde magni officia ipsam voluptas neque a quas nesciunt praesentium
+            ipsum sapiente. Quis debitis sint hic, ullam minima eius doloribus, id libero minus quam inventore.</p>
+
     </main>
     <footer>
         <nav>
@@ -76,5 +91,8 @@
     </footer>
 
 </body>
+
+<div></div>
+
 
 </html>
